...
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:menu="@menu/my_menu" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:id="@+id/question_detail_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
...

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Prüfungsname"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />

...
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                <EditText
                        android:id="@+id/et_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Prüfungsinfo"
                        android:imeOptions="actionUnspecified" />

            </com.google.android.material.textfield.TextInputLayout>
...
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                <EditText
                        android:id="@+id/et_beschreibung"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Prüfungsbeschreibung"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textMultiLine"
                        android:maxLines="5" />
...
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:gravity="center">

                <Button
                        android:id="@+id/btn_delete"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="Löschen"
                        android:layout_weight="1" />

                <Button
                        android:id="@+id/btn_update"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="Updaten"
                        android:textColor="@android:color/white"
                        android:layout_weight="1" />

            </LinearLayout>


...
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/questionfab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:tint="@android:color/white"
            app:srcCompat="@android:drawable/ic_input_add"
...
