<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.QuestionCreateActivity">


    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:menu="@menu/my_menu"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
            android:id="@+id/question_detail_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:padding="10dp">

                <Button
                        android:id="@+id/btn_question_add"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="Hinzufügen"
                        android:layout_weight="1" />


            </LinearLayout>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="10"
                    android:minLines="5"
                    android:gravity="center"
                    android:maxLines="15"
                    android:id="@+id/et_fragestellung"
                    android:hint="Fragestellung"
                    android:textColorHint="#546E7A" />

            <EditText
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="10"
                    android:minLines="5"
                    android:gravity="center"
                    android:maxLines="15"
                    android:id="@+id/et_hinweis"
                    android:hint="Aufgabenhinweis"
                    android:textColorHint="#546E7A" />

            <EditText
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="10"
                    android:minLines="5"
                    android:gravity="center"
                    android:maxLines="15"
                    android:id="@+id/et_loesung"
                    android:hint="Musterlösung"
                    android:textColorHint="#546E7A" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>