...
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteX="35dp"
            app:layout_constraintTop_toBottomOf="@+id/subtitle"
            android:layout_marginTop="32dp"
            android:minHeight="48dp" />

    <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_edit_text"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteX="24dp"
            app:layout_constraintTop_toBottomOf="@+id/username_edit_text"
            android:layout_marginTop="16dp"
            android:minHeight="48dp" />

    <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_edit_text"
            android:text="@string/sign_in_button_label"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteX="5dp"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
            android:layout_marginTop="16dp" />

    <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_edit_text"
            android:text="@string/register_button_label"
            android:layout_centerHorizontal="true"
            tools:layout_editor_absoluteX="38dp"
...
